tests/baselines/reference/getAndSetNotIdenticalType.errors.txt
==== tests/cases/compiler/getAndSetNotIdenticalType.ts (2 errors) ====
    class C {
        get x(): number {
        ~~~~~~~~~~~~~~~~~
            return 1;
    ~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2096: 'get' and 'set' accessor must have the same type.
        set x(v: string) { }
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2096: 'get' and 'set' accessor must have the same type.
    }